# hiss

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  configuration.xml  main.cpp  one_elevator.xml
builder/: CMakeLists.txt  Factory.cpp  Factory.h  tinyxml2.cpp  tinyxml2.h
model/: Building.cpp  Building.h  CMakeLists.txt  Car.cpp  Car.h  Elevator.cpp  Elevator.h  Floor.cpp  Floor.h  Passenger.cpp  Passenger.h  common.h
simulator/: Algorithm.h  CMakeLists.txt  CallButtonAlgorithm.cpp  CallButtonAlgorithm.h  ConstantTraffic.cpp  ConstantTraffic.h  Simulator.cpp  Simulator.h  Traffic.h  UpDownButtonAlgorithm.cpp  UpDownButtonAlgorithm.h
src/: CMakeLists.txt  main.cpp  main_gui.cpp
src/builder/: CMakeLists.txt  Factory.cpp
src/cfg/: CMakeLists.txt  Configuration.cpp  Configuration.h  Result.cpp  Result.h
src/gui/: BuildingWidget.cpp  BuildingWidget.h  CMakeLists.txt  CarWidget.cpp  CarWidget.h  ConfigurationWindow.cpp  ConfigurationWindow.h  ElevatorWidget.cpp  ElevatorWidget.h  FloorWidget.cpp  FloorWidget.h  MainWindow.cpp  MainWindow.h
src/model/: Algorithm.h  Building.cpp  Building.h  CMakeLists.txt  Car.cpp  Car.h  Direction.cpp  Direction.h  Elevator.cpp  Elevator.h  Floor.cpp  Floor.h  Passenger.h  Traffic.h  common.h
src/simulator/: Algorithm.h  CMakeLists.txt  CallButtonAlgorithm.cpp  CallButtonAlgorithm.h  Car.cpp  Car.h  ConstantTraffic.cpp  ConstantTraffic.h  ControlPanel.cpp  ControlPanel.h  EvalAlgorithm.cpp  EvalAlgorithm.h  Passenger.cpp  Passenger.h  Simulator.cpp  Simulator.h  StandardAlgorithm.cpp  StandardAlgorithm.h  Stop.cpp  Stop.h  Traffic.h  TrivialAlgorithm.cpp  TrivialAlgorithm.h  UpDownButtonAlgorithm.cpp  UpDownButtonAlgorithm.h
system_tests/: config_1_elev.xml  config_2_elev.xml  standard_1_elev.xml  system_test.py  trivial_1_elev.xml  trivial_2_elev.xml
test/: CMakeLists.txt
test/model_tests/: CMakeLists.txt  car_check.cpp  elevator_check.cpp  passenger_check.cpp
test/simulator_tests/: CMakeLists.txt  algorithm_check.cpp  eval_algorithm_check.cpp  passenger_check.cpp  simulator_check.cpp  standard_algorithm_check.cpp  up_down_algorithm_check.cpp
